--- a/todo_list_train/src/component/List.css
+++ b/todo_list_train/src/component/List.css
@@ -1,22 +1,23 @@
-.list {
+.List {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 20px
 }
 
-.list > input {
-    padding: 15px 0px;
+.List > input {
     border: none;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid grey;
+    padding: 15px 0px;
 }
 
-.list > input:focus {
+.List > input:focus {
     outline: none;
-    border-bottom: 1px solid blue;
+    border-bottom: 1px solid deepskyblue;
+    padding: 15px 0px;
 }
 
-.list > .todos-wrapper{
+.List .wrapper-todos{
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 20px
 }
